--- a/static/css/contacts.css
+++ b/static/css/contacts.css
@@ -1,8 +1,8 @@
 .contacts {
   height: 100vh;
   position: relative;
-  color: var(--color-light);
-  background-color: var(--color-dark);
+  color: var(--color-light, rgb(243, 242, 239));
+  background-color: var(--color-dark, rgb(51, 51, 51));
 }
 
 .contacts__content {
@@ -36,7 +36,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: var(--color-light);
+  color: var(--color-light, rgb(243, 242, 239));
 
   padding-bottom: 0.2em;
   transition: color 0.5s;
@@ -45,7 +45,7 @@
 .socials__link:link:hover,
 .socials__link:visited:hover {
   position: relative;
-  color: var(--color-light-accent);
+  color: var(--color-light-accent, rgb(244, 121, 124));
 }
 
 .socials__link:link:before,
@@ -96,7 +96,7 @@
   display: flex;
   height: 0.05em;
   margin: 0.1em auto 0 auto;
-  background-color: var(--color-light-accent);
+  background-color: var(--color-light-accent, rgb(244, 121, 124));
 }
 
 .contacts__form textarea {
@@ -127,5 +127,5 @@
   height: 0.1em;
   display: flex;
   margin: 0.2em auto 0 auto;
-  background-color: var(--color-light-accent);
+  background-color: var(--color-light-accent, rgb(244, 121, 124));
 }
