--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -1,6 +1,6 @@
 .projects {
   position: relative;
-  background-color: var(--color-light);
+  background-color: var(--color-light, rgb(243, 242, 239));
 }
 
 .projects__list {
@@ -13,7 +13,7 @@
 .projects__item {
   display: flex;
   flex: 0 1 calc(50% - 2.5%);
-  box-shadow: 2px 2px 2px 0px rgba(var(--dark), 0.2);
+  box-shadow: 2px 2px 2px 0px rgba(var(--dark, 51, 51, 51), 0.2);
 }
 
 .projects__item:hover {
@@ -45,7 +45,7 @@
 
   padding: 1em;
   padding-right: 2.5em;
-  color: var(--color-light);
+  color: var(--color-light, rgb(243, 242, 239));
   transition: background-color 0.5s;
 }
 
@@ -54,7 +54,7 @@
   background-color: rgba(44, 44, 44, 0.418);
 }
 
-.project__item-details {
+.projects__item-details {
   display: flex;
   flex-direction: column;
 
@@ -62,8 +62,8 @@
   transition: opacity 0.5s;
 }
 
-.projects__item:hover .project__item-details,
-.projects__item:active .project__item-details {
+.projects__item:hover .projects__item-details,
+.projects__item:active .projects__item-details {
   opacity: 1;
 }
 
@@ -133,7 +133,7 @@
   margin: 0 0.5em 0.2em 0;
 
   border-radius: 16px;
-  border: 1px solid var(--color-light);
+  border: 1px solid var(--color-light, rgb(243, 242, 239));
 }
 
 .projects__item-tag:last-child {
@@ -148,7 +148,7 @@
   position: absolute;
 
   font-size: 2em;
-  color: var(--color-light);
+  color: var(--color-light, rgb(243, 242, 239));
 
   border-radius: 50%;
   transition: background-color 0.5s;
@@ -156,11 +156,11 @@
 
 .projects__item-link:link:hover,
 .projects__item-link:visited:hover {
-  color: var(--color-light-accent);
+  color: var(--color-light-accent, rgb(244, 121, 124));
 }
 
 .projects__item:not(:hover) .projects__item-link:link,
 .projects__item:not(:hover) .projects__item-link:visited {
-  background-color: var(--color-dark-accent);
-  box-shadow: 0px 0px 2px 2px rgba(var(--dark), 0.2);
+  background-color: var(--color-dark-accent, rgb(50, 89, 99));
+  box-shadow: 0px 0px 2px 2px rgba(var(--dark, 51, 51, 51), 0.2);
 }
