--- a/static/css/skills.css
+++ b/static/css/skills.css
@@ -1,7 +1,7 @@
 .skills {
   display: flex;
-  color: var(--color-light);
-  background-color: var(--color-dark-accent);
+  color: var(--color-light, rgb(243, 242, 239));
+  background-color: var(--color-dark-accent, rgb(50, 89, 99));
 }
 
 .skills__content {
@@ -15,7 +15,7 @@
   margin-bottom: 5%;
   padding-bottom: 5%;
   justify-content: space-between;
-  border-bottom: 1px solid var(--color-light);
+  border-bottom: 1px solid var(--color-light, rgb(243, 242, 239));
 }
 
 .skills__category-group:last-child {
@@ -63,7 +63,7 @@
 
 .skills__item:hover {
   transform: scale(1.05);
-  background-color: rgba(var(--black), 0.1);
+  background-color: rgba(var(--black, 0, 0, 0), 0.1);
 }
 
 .skills__item p {
@@ -76,5 +76,5 @@
 .skills__item-strength {
   font-size: 1em;
   display: inline-flex;
-  color: var(--color-light-accent);
+  color: var(--color-light-accent, rgb(244, 121, 124));
 }
