--- a/static/css/index.css
+++ b/static/css/index.css
@@ -172,7 +172,7 @@ p {
 }
 
 /*-----------------------------*/
-/*-----------ICONS-----------*/
+/*------------ICONS------------*/
 /*-----------------------------*/
 
 .ion-flash--disabled {
@@ -180,8 +180,21 @@ p {
   color: var(--color-light, rgb(243, 242, 239));
 }
 
+/*-----------------------------*/
+/*-------------IMG-------------*/
+/*-----------------------------*/
+
+img {
+  display: block;
+}
+
+.lozad {
+  transition: padding 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
 .lozad:not([data-loaded]) {
   padding: 5%;
+  opacity: 0.7;
 }
 
 .lozad-hidden {
