Add dynamic age calculation and fix css issues on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -190,6 +190,7 @@ img {
 
 .lozad {
   transition: padding 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  will-change: opacity, padding;
 }
 
 .lozad:not([data-loaded]) {
