--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -93,6 +93,7 @@
   object-fit: cover;
 
   transition: filter 0.5s, padding 0.5s ease-in-out;
+  will-change: filter, padding;
 }
 
 .projects__item-thumbnail.lozad-hidden {
