--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,7 +1,3 @@
-/*-----------------------------*/
-/*------------ABOUT------------*/
-/*-----------------------------*/
-
 .about__content {
   width: 60%;
   align-items: center;
@@ -37,12 +33,12 @@
   margin-bottom: 1em;
 }
 
-.about__detail span {
+.about__detail > span {
   font-size: 0.9em;
   line-height: 1.25em;
 }
 
-.about__detail span:first-child {
+.about__detail > span:first-child {
   font-weight: 700;
   margin-bottom: 0.2em;
 }
