--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -90,6 +90,7 @@
 
   width: 100%;
   height: 100%;
+  min-height: 9em;
   object-fit: cover;
 
   transition: filter 0.5s, padding 0.5s ease-in-out;
