--- a/static/css/index.css
+++ b/static/css/index.css
@@ -189,12 +189,14 @@ img {
 }
 
 .lozad {
-  transition: padding 0.5s ease-in-out, opacity 0.5s ease-in-out;
-  will-change: opacity, padding;
+  transform: scale(1);
+
+  transition: opacity 0.5s, transform 0.5s ease-in-out;
+  will-change: transform;
 }
 
 .lozad:not([data-loaded]) {
-  padding: 5%;
+  transform: scale(0.5);
   opacity: 0.7;
 }
 
