--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -32,6 +32,8 @@
   flex: 1;
   overflow: hidden;
   position: relative;
+
+  background: var(--color-white, rgb(255, 255, 255));
 }
 
 .projects__item figcaption {
@@ -45,7 +47,9 @@
 
   padding: 1em;
   padding-right: 2.5em;
+  background-color: transparent;
   color: var(--color-light, rgb(243, 242, 239));
+
   transition: background-color 0.5s;
 }
 
@@ -74,15 +78,16 @@
 .projects__item-description {
   /*TODO*/
   text-indent: 0;
-  margin-left: -100%;
   margin-bottom: auto;
-  transition: margin-left 0.5s;
-  will-change: margin-left;
+
+  transform: translateX(-100%);
+  transition: transform 0.5s;
+  will-change: transform;
 }
 
 .projects__item:hover .projects__item-description,
 .projects__item:active .projects__item-description {
-  margin-left: 0;
+  transform: translateX(0);
 }
 
 .projects__item-thumbnail {
@@ -93,8 +98,9 @@
   min-height: 9em;
   object-fit: cover;
 
-  transition: filter 0.5s, padding 0.5s ease-in-out;
-  will-change: filter, padding;
+  transform: scale(1);
+  transition: filter 0.5s, opacity 0.5s, transform 0.5s ease-in-out;
+  will-change: transform;
 }
 
 .projects__item-thumbnail.lozad-hidden {
@@ -102,8 +108,7 @@
 }
 
 .projects__item-thumbnail.lozad:not([data-loaded]) {
-  padding: 15% 30%;
-  background: var(--color-white);
+  transform: scale(0.5);
 }
 
 .projects__item:hover .projects__item-thumbnail,
@@ -116,14 +121,14 @@
   flex-wrap: wrap;
   list-style: none;
 
-  margin-bottom: -100%;
-  transition: margin-bottom 0.5s;
-  will-change: margin-bottom;
+  transform: translateY(100%);
+  transition: transform 0.5s;
+  will-change: transform;
 }
 
 .projects__item:hover .projects__item-tags,
 .projects__item:active .projects__item-tags {
-  margin-bottom: 0;
+  transform: translateY(0);
 }
 
 .projects__item-tag {
