--- a/static/css/about.css
+++ b/static/css/about.css
@@ -29,6 +29,12 @@
   border: 0.2em solid var(--color-dark-accent, rgb(50, 89, 99));
 }
 
+.about__photo > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
 .about__detail:first-child {
   margin-bottom: 1em;
 }
