--- a/static/css/about.css
+++ b/static/css/about.css
@@ -29,7 +29,7 @@
   border: 0.2em solid var(--color-dark-accent, rgb(50, 89, 99));
 }
 
-.about__photo > img {
+.about__photo img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
