--- a/static/css/career.css
+++ b/static/css/career.css
@@ -168,9 +168,8 @@
   line-height: 1.45em;
 }
 
-.career__technologies li {
+.career__technologies > li {
   /*TODO*/
-
   padding: 0.2em 0.6em;
   margin: 0 0.5em 0.3em 0;
 
@@ -194,20 +193,20 @@
   line-height: 1.45em;
 }
 
-.career__recommendation-details {
+.recommendation__details {
   display: flex;
   margin-bottom: 1em;
   align-items: center;
   flex-direction: column;
 }
 
-.career__recommendation-details:link,
-.career__recommendation-details:visited {
+.recommendation__details:link,
+.recommendation__details:visited {
   text-decoration: none;
   color: var(--color-dark, rgb(51, 51, 51));
 }
 
-.career__recommendation-details img {
+.recommendation__author-photo {
   width: 90px;
   height: 90px;
   border-radius: 50%;
@@ -215,20 +214,26 @@
   border: 2px solid var(--color-dark-accent, rgb(50, 89, 99));
 }
 
-.career__recommendation-details h4,
-.career__recommendation-details p {
+.recommendation__author-photo img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.recommendation__author-info > h4,
+.recommendation__author-info > p {
   /*TODO*/
   text-indent: 0;
   text-align: center;
   line-height: 1.45em;
 }
 
-.career__recommendation-details h4 {
+.recommendation__author-info > h4 {
   font-style: normal;
   margin-bottom: 0.5em;
   color: var(--color-dark-accent, rgb(50, 89, 99));
 }
 
-.career__recommendation-details:hover h4 {
+.recommendation__details:hover .recommendation__author-info > h4 {
   text-decoration: underline;
 }
